# Smart-Campus-Digital-Twin-v4

./: .dockerignore  .gitignore  Makefile  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  sim-control.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
deployment/argocd/: application.yaml  sim-control.yaml  simulator-application.yaml  smart-campus.yaml
deployment/k8s/: acme-solver-svc.yaml  api.yaml  apply-secrets.sh  bridge.yaml  configmap-extras.yaml  configmap.yaml  frontend.yaml  grafana.yaml  influxdb.yaml  kafka-init.yaml  kafka.yaml  keycloak.yaml  kong-certificate.yaml  kong.yaml  konnect.yaml  kustomization.yaml  ml-consumer.yaml  ml-prediction.yaml  (+14 more)
deployment/k8s-simulator/: kustomization.yaml  simulator.yaml
scripts/: deploy_ml_pipeline.sh  get_token.sh  patch_secrets.py  train_ml_models.sh  verify_ml_pipeline.sh
services/ml-prediction/kedro_project/: pyproject.toml
services/ml-prediction/kedro_project/conf/base/: catalog.yml  parameters.yml
services/ml-prediction/kedro_project/src/campus_ml/: __init__.py  __main__.py  feature_utils.py  pipeline_registry.py  settings.py
services/ml-prediction/kedro_project/src/campus_ml/pipelines/: congestion_nodes.py  energy_nodes.py  pipelines.py
shared/: db.py  logging_config.py  models.py  requirements.txt
tests/: conftest_dashboard.py  test_academic_calendar.py  test_anomaly_rules.py  test_bridge_validator.py  test_consumer_anomaly.py  test_dashboard_pipeline.py  test_influx_injection.py  test_sensor_schema.py  test_zone_occupancy.py
(+201 files in other folders)
