[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "campus_ml"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.15",]

[project.scripts]
kedro_project = "campus_ml.__main__:main"

[tool.kedro]
package_name = "campus_ml"
project_name = "campus_ml"
kedro_init_version = "0.19.15"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "campus_ml.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
